# advent-of-code-2024

./: Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs  prelude.rs  puzzle.rs
src/puzzle/: day_00.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs
